- UserInfo에 updateUserForCredit(개별 user_credit 갱신)
